apis/projects/kuberentes/httproute.yaml
# # apiVersion: policy.linkerd.io/v1beta2
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: project-vastaya-traffic-split
#   namespace: vastaya
# spec:
#   # hostnames:
#   # - projects.vastaya.tech
#   # - projects-vastaya-svc.vastaya.svc.cluster.local
#   parentRefs:
#     - name: projects-vastaya-svc
#       group: core
#       kind: Service
#       namespace: vastaya
#       port: 80
#   rules:
#   - backendRefs:
#     - name: projects-vastaya-svc
#       # namespace: vastaya
#       # kind: Service
#       port: 80
#       weight: 50
#     - name: projects-canary-vastaya-svc
#       # namespace: vastaya
#       # kind: Service
#       port: 80
#       weight: 50
#   # - matches:
#   #   - headers:
#   #     - name: "x-request-id"
#   #       value: "alternative"
#   #   backendRefs:
#   #     - name: projects-canary-vastaya-svc
#   #       port: 80
#   # - backendRefs:
#   #   - name: projects-vastaya-svc
#   #     port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: project-vastaya-traffic-split
#   namespace: vastaya
# spec:
#   parentRefs:
#     - name: projects-vastaya-svc
#       group: core
#       kind: Service
#       namespace: vastaya
#       port: 80
#   rules:
#     - matches:
#       - headers:
#         - name: "User-Agent"
#           type: RegularExpression
#           value: ".*Firefox.*"
#         - name: Accept-Language
#           type: RegularExpression
#           value: "en-US.*" 
#       backendRefs:
#         - name: projects-vastaya-svc
#           port: 80
#           weight: 10
#         - name: projects-canary-vastaya-svc
#           port: 80
#           weight: 90
#     - backendRefs:
#         - name: projects-vastaya-svc
#           port: 80
# ---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: project-vastaya-traffic-split
  namespace: vastaya
spec:
  parentRefs:
    - name: projects-vastaya-svc
      group: core
      kind: Service
      namespace: vastaya
      port: 80
  rules:
    - backendRefs:
        - name: projects-vastaya-svc
          port: 80
        #   weight: 1
        # - name: projects-canary-vastaya-svc
        #   port: 80
        #   weight: 0
      filters:
      - type: RequestMirror
        requestMirror:
          backendRef:
            name: projects-canary-vastaya-svc
            port: 80
